--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Ajax API</title>
-    </head>
-    <body>
-        <h1>Ajax API</h1>
-        <button id="get-button">READ/GET Products</button>
-        <form id="creat-form">
-            <input type="text" id="creat-input">
-            <button>Create/PORT</button>
-        </form>
-        <hr>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+<html>
+<head>
+    <title>AJAX API</title>
+</head>
+<body>
+    <h1>AJAX API</h1>
+    <button id="get-button">READ/GET Products</button>
+    <form id="create-form">
+        <input type="text" id="create-input">
+        <button>Create/POST</button>
+    </form>
+    <hr>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-        <script src="./libs/js/jquery.js"></script>
-        <script src="./libs/js/script.js"></script>
-    </body>
+    <script src="libs/js/jquery.js"></script>
+    <script src="libs/js/script.js"></script>
+</body>
 </html>
